--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'HQ'
 - !lcsh 'Women'
 - !lcsh 'Beauty, Personal'
+- GITenberg
 title: 'Beauty: Illustrated Chiefly by an Analysis and Classificatin of Beauty in
   Woman'
 url: http://www.gutenberg.org/ebooks/35409
